--- a/VintedProject/src/app/Components/Components/Cards/offer-card/offer-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/offer-card/offer-card.component.html
@@ -1,6 +1,6 @@
 <div  class="content-container product-card" >
   <div>
-    <img  style=" max-height: 120px;" (click)="onImageClick()" [src]="product?.imageName ? 'https://localhost:8010/vintedProject-api/v1/images/' + product?.imageName : 'assets/resources/vestito.jpg'">
+    <img  style=" max-height: 120px;"[src]="product?.imageName ? 'https://localhost:8010/vintedProject-api/v1/images/' + product?.imageName : 'assets/resources/vestito.jpg'">
   </div>
   <div style="padding-left: 2%;">
     <div class="">
