--- a/VintedProject/src/app/Components/Pages/Order/order.component.html
+++ b/VintedProject/src/app/Components/Pages/Order/order.component.html
@@ -1,6 +1,10 @@
 
-<strong> Prodotti: </strong> {{ myOrder!.insertionIdList}} <br>
 <strong>  Totale:  </strong> {{ myOrder!.total}} €<br>
 <strong>  Metodo di pagamento:  </strong> {{ myOrder!.paymentMethod}} <br>
 <strong>  Data:  </strong> {{myOrder!.date}}<br>
+<strong> Prodotti: </strong>
+<p></p>
+<ng-container *ngFor="let item of insertions; let i = index;">
+  <p>{{item.title}}</p>
+</ng-container>
 
