--- a/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
@@ -50,13 +50,10 @@
 
 <div class="secondDiv">
   <div>
-    <button mat-button [routerLink]="['/category' , 'donna']">Donna</button>
-    <button mat-button [routerLink]="['/category' , 'uomo']">Uomo</button>
-    <button mat-button [routerLink]="['/category' , 'bamini']">Bambini</button>
-    <button mat-button [routerLink]="['/category' , 'casa']">Casa</button>
-    <button mat-button [routerLink]="['/category' , 'intrattenimento']">Intrattenimento</button>
-    <button mat-button [routerLink]="['/category' , 'animali']">Animali</button>
-    <button mat-button [routerLink]="['/dash']">Informazioni</button>
+    <button mat-button [routerLink]="['/category' , 'xiaomi']">Xiaomi</button>
+    <button mat-button [routerLink]="['/category' , 'Puma']">Puma</button>
+    <button mat-button [routerLink]="['/category' , 'Fila']">Fila</button>
+    <button mat-button [routerLink]="['/dash']" >Amministazione</button>
     <button mat-button [routerLink]="['/cart']">Accesso rapido al carrello</button>
   </div>
 </div>
