--- a/VintedProject/src/app/Components/Pages/Admin/dashboard/dashboard.component.html
+++ b/VintedProject/src/app/Components/Pages/Admin/dashboard/dashboard.component.html
@@ -11,9 +11,8 @@
         <hr style=" bottom: 22%; left: 20px; right: 20px; border: none; border-top: 1px solid #ccc;">
         <button class="action-button" (click)="getOrderById()">Get All Order from User</button>
         <hr style=" bottom: 22%; left: 20px; right: 20px; border: none; border-top: 1px solid #ccc;">
-        <button class="action-button" (click)="findAll()">Get All from User</button>
-        <hr style=" bottom: 22%; left: 20px; right: 20px; border: none; border-top: 1px solid #ccc;">
-        <button class="action-button" (click)="deletePayment()">Delete Payment</button>
+        <button class="action-button" (click)="getAllOffer()">Get Offer from User</button>
+
       </div>
     </div>
     <div class="card card-large">
@@ -37,21 +36,16 @@
         </div>
 
 
-        <div class="input-field" *ngIf="activeButton === 'findAll'">
+        <div class="input-field" *ngIf="activeButton === 'getAllOffer'">
           <label for="userId">User ID:</label>
           <input type="number" id="userId" [(ngModel)]="userId">
-          <label for="page">Page:</label>
-          <input type="text" id="page" [(ngModel)]="page">
-        </div>
-
-        <div class="input-field" *ngIf="activeButton === 'deletePayment'">
-          <label for="paymentId">Payment ID:</label>
-          <input type="text" id="paymentId" [(ngModel)]="paymentId">
+          <label for="page">Insertion ID:</label>
+          <input type="text" id="page" [(ngModel)]="insertionId">
         </div>
         <button class="search-button" (click)="action()">Search</button>
       </div>
     </div>
-  </div>
+
 
   <div class="table-container"  *ngIf="activeButton === 'getAllByUserId'">
     <table>
@@ -103,6 +97,35 @@
         </ng-container>
         </tbody>
       </table>
+    </div>
+
+
+      <div class="table-container"  *ngIf="activeButton === 'getAllOffer'">
+      <table>
+        <thead>
+        <tr>
+          <th>ID</th>
+          <th>Offerta</th>
+          <th>Stato</th>
+          <th>Utente Che ha effettuato l'offerta</th>
+          <th>Elimina</th>
+        </tr>
+        </thead>
+        <tbody>
+
+
+
+      <ng-container *ngIf="activeButton === 'getAllOffer'">
+        <tr *ngFor="let offer of offerDtoArray">
+          <td>{{ offer.id}}</td>
+          <td>{{ offer.price }}</td>
+          <td>{{ offer.status }}</td>
+          <td>{{ offer.userId }}€</td>
+          <td > <button (click)="actionDeleteOrder(offerId)"> X </button> </td>
+        </tr>
+      </ng-container>
+      </tbody>
+      </table>
 
 
 
@@ -110,5 +133,6 @@
       <!-- Add pagination logic here -->
     </div>
   </div>
+</div>
 </div>
 
