--- a/VintedProject/src/app/Components/Pages/chat/chat.component.css
+++ b/VintedProject/src/app/Components/Pages/chat/chat.component.css
@@ -69,6 +69,8 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  height: 50%;
+  width: 100%;
   font-weight: bold;
   margin-bottom: 10px;
 }
