--- a/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.html
@@ -2,24 +2,27 @@
   <div class="image-container">
     <img class="rounded-image" [src]="imageName" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
 
-    <button *ngIf="item?.userId==myid"  style="display: flex; bottom: 2px; margin: 5px; left: 25%;" (click)="openOfferModal()" > Visualizza offerte</button>
+    <strong class="description" style="color: green; margin-left: 20%" *ngIf="!item?.available">Venduta</strong>
+    <button *ngIf="item?.userId==myid && item?.available"  style="display: flex; bottom: 2px; margin: 5px; left: 25%;" (click)="openOfferModal()" > Visualizza offerte</button>
 
   </div>
   <div style="display: flex;">
   <div class="content-container" (click)="onImageClick()">
     <h3 class="title">{{ item?.title }}</h3>
     <p class="description">{{ item?.description }}</p>
+
   </div>
-    <button *ngIf="!item?.isPrivate" style="display: flex; left: 60%;" mat-icon-button (click)="share()" >
+    <button *ngIf="!item?.isPrivate && item?.available" style="display: flex; left: 60%;" mat-icon-button (click)="share()" >
       <mat-icon>share</mat-icon>
     </button>
-    <button *ngIf="item?.isPrivate" style="display: flex; left: 60%;" mat-icon-button [matMenuTriggerFor]="menu">
+    <button *ngIf="item?.isPrivate && item?.available" style="display: flex; left: 60%;" mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>share</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
       <button mat-menu-item (click)="share24()" style="font-size: 10px">Condividi per 1 giorno</button>
       <button mat-menu-item (click)="share8766()" style="font-size: 10px">Condividi per 1 anno</button>
     </mat-menu>
+
   </div>
 
 
