--- a/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.css
+++ b/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.css
@@ -193,12 +193,12 @@ div#hormenu li li a {
   display: grid;
 
   gap: 20px;
-  max-height: 300px; /* Imposta l'altezza massima desiderata */
+  max-height: 320px;
   overflow-y: auto;
 }
 
 .offer-column {
-  width: calc(33.33% - 20px); /* Larghezza di ogni colonna (1/3) con margine */
+  width: calc(33.33% - 20px);
 }
 
 .clearfix {
@@ -208,9 +208,9 @@ div#hormenu li li a {
 .offer-item {
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  width: fit-content;
+  min-width: 380%;
   padding: 8px;
-  margin-bottom: 10px; /* Aggiunge uno spazio tra le offerte */
+  margin-bottom: 10px;
 }
 
 .offer-details {
