--- a/VintedProject/src/app/Components/Pages/Insertion/catalog/catalog.component.css
+++ b/VintedProject/src/app/Components/Pages/Insertion/catalog/catalog.component.css
@@ -38,7 +38,7 @@
 
 
 .button {
-  background-color: rgb(116, 116, 247);
+  background-color: #007b0f;
   text-align: center;
   font-weight: bold;
   height: 50px;
