--- a/VintedProject/src/app/Components/Components/Cards/offer-card/offer-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/offer-card/offer-card.component.html
@@ -15,7 +15,10 @@
       <p>Stato: {{ offer?.status}}</p>
     </div>
   </div>
-  <button *ngIf="!accepted" class="button" (click)="deleteOffer()" > ELIMINA OFFERTA </button>
-  <button *ngIf="accepted" class="button" (click)="createOrder()"  style="background-color: #007b0f"> PAGAAAA </button>
+  <div *ngIf="refused">
+  <p> OFFERTA RIFIUTATA</p>
+  </div>
+  <button *ngIf="!accepted && !refused" class="button" (click)="deleteOffer()" > ELIMINA OFFERTA </button>
+  <button *ngIf="accepted" class="button" (click)="createOrder()"  style="background-color: #007b0f"> PAGA ORA </button>
 </div>
 
