--- a/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.html
@@ -32,8 +32,8 @@
 </div>
 
 <div class="offer-message-modal" *ngIf="offerModalOpen" (click)="closeOfferModal($event)">
-  <div class="offer">
-    <h2 style="color: black">Lista delle offerte per l'inserzione "{{item?.title}}":</h2>
+  <div class="offer" (click)="stopClickPropagation($event)">
+  <h2 style="color: black">Lista delle offerte per l'inserzione "{{item?.title}}":</h2>
     <div class="offer-list" *ngIf="offers">
       <div class="offer-column" *ngFor="let offer of offers; let i = index">
         <div class="offer-item">
@@ -42,12 +42,11 @@
             <p style="color: black">Prezzo offerto: {{offer.price}}€</p>
             <div class="offer-buttons">
               <p *ngIf="offer.status === 'APPROVED'" STYLE="color: #007b0f"> OFFERTA ACCETTATA </p>
-              <button class="btn" *ngIf="offer.status !== 'APPROVED'" (click)="acceptOffer(i)">ACCETTA</button>
-              <button class="btn" *ngIf="offer.status !== 'APPROVED'" (click)="deleteOffer(i)">RIFIUTA</button>
-
+              <p *ngIf="offer.status === 'REFUSED'" STYLE="color: #007b0f"> OFFERTA RIFIUTATA </p>
+              <button class="btn" *ngIf="offer.status !== 'APPROVED' && offer.status !== 'REFUSED'" (click)="acceptOffer(i)">ACCETTA</button>
+              <button class="btn" *ngIf="offer.status !== 'APPROVED' && offer.status !== 'REFUSED'" (click)="deleteOffer(i)">RIFIUTA</button>
             </div>
           </div>
-        </div>
         <div *ngIf="(i + 1) % 3 === 0 || i === offers.length - 1" class="clearfix"></div>
       </div>
     </div>
