--- a/VintedProject/src/app/Components/Pages/User/myprofile/myprofile.component.html
+++ b/VintedProject/src/app/Components/Pages/User/myprofile/myprofile.component.html
@@ -53,7 +53,7 @@
       <div class="card-container">
         <div class="card-row">
           <ng-container *ngFor="let item of myOffer; let i = index;">
-            <app-offer-profile-card [offer]="item"  class="card-item"></app-offer-profile-card>
+            <app-offer-profile-card  *ngIf="!item.paid" [offer]="item"  class="card-item"></app-offer-profile-card>
             <ng-container *ngIf="(i + 1) % 5 === 0" class="clearfix"></ng-container>
           </ng-container>
         </div>
@@ -66,7 +66,7 @@
   <div class="body-content" style="margin-top: 30px" *ngIf="isAnyOrder">
         <div style="max-height: 700px;">
           <div class="header">
-            <h2 class="font">I mie ordini</h2>
+            <h2 class="font">I miei ordini</h2>
             <button class="showAll-button" (click)="openOrderModal()" >Vedi tutti</button>
           </div>
           <div style="margin: 15%"> </div>
