--- a/VintedProject/src/app/Components/Pages/chat/chat.component.html
+++ b/VintedProject/src/app/Components/Pages/chat/chat.component.html
@@ -2,7 +2,10 @@
   <div class="user-list">
     <ul>
       <li *ngFor="let chats of chat" (click)="onSelectChat(chats)">
-        <button class="button btn" [ngClass]="{'selected-user': chats === selectedChat}" style="margin: 10px">{{chats.user2NameLastname}} {{chats.insertionTitle}}</button>
+        <button class="button btn" [ngClass]="{'selected-user': chats === selectedChat}" style="margin: 10px">
+          {{ chats.user1 === myId ? chats.user2NameLastname : chats.user1NameLastname }} {{ chats.insertionTitle }}
+        </button>
+
       </li>
     </ul>
   </div>
