--- a/VintedProject/src/app/Components/Pages/Insertion/private/private.component.html
+++ b/VintedProject/src/app/Components/Pages/Insertion/private/private.component.html
@@ -6,6 +6,7 @@
   <div class="info-container">
     <div class="infoContainer">
       <div style="width: 100%">
+        <h1 *ngIf="insertion?.isPrivate" style="color: red"> INSERZIONE PRIVATA </h1>
         <h1>{{ insertion?.title }}</h1>
         <p>
 
