--- a/VintedProject/src/app/Components/Components/Cards/order-card/order-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/order-card/order-card.component.html
@@ -5,9 +5,9 @@
   <div style="padding-left: 2%;">
     <div class="product-card">
       <!-- Visualizza i dettagli del prodotto -->
-      <h2 style="color: black">{{ order!.date}}</h2>
-      <p style="max-width: 250px; color: black">totale: {{ order!.total}}€</p>
-      <p  style="color: black"> {{order.paymentMethod}}</p>
+      <h3 style="color: black">Data: {{ order!.date}}</h3>
+      <p style="max-width: 250px; color: black">Totale: {{ order!.total}}€</p>
+      <p  style="color: black">Pagamento: {{order.paymentMethod}}</p>
     </div>
   </div>
 </div>
