--- a/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
@@ -50,9 +50,9 @@
 
 <div class="secondDiv">
   <div>
-    <button mat-button [routerLink]="['/category' , 'xiaomi']">Xiaomi</button>
-    <button mat-button [routerLink]="['/category' , 'Puma']">Puma</button>
-    <button mat-button [routerLink]="['/category' , 'Fila']">Fila</button>
+    <button mat-button [routerLink]="['/category' , 'UOMO']">Uomo</button>
+    <button mat-button [routerLink]="['/category' , 'DONNA']">Donna</button>
+    <button mat-button [routerLink]="['/category' , 'BAMBINO']">Bambino</button>
     <button mat-button *ngIf="isAdmin" [routerLink]="['/dash']" >Amministazione</button>
     <button mat-button [routerLink]="['/cart']">Accesso rapido al carrello</button>
   </div>
